// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`LineNumberRenderable renders line numbers correctly 1`] = `
" 1 Line 1           
 2 Line 2           
 3 Line 3           
                    
                    
                    
                    
                    
                    
                    
"
`;

exports[`LineNumberRenderable renders line numbers for wrapping text 1`] = `
" 1 Line 1 is very lo
    and should wrap 
   ound multiple lin
                    
                    
                    
                    
                    
                    
                    
"
`;

exports[`LineNumberRenderable renders line numbers with offset 1`] = `
" 42 Line 1          
 43 Line 2          
 44 Line 3          
                    
                    
                    
                    
                    
                    
                    
"
`;

exports[`LineNumberRenderable hides line numbers for specific lines 1`] = `
" 1 Line 1           
   Line 2           
 3 Line 3           
   Line 4           
 5 Line 5           
                    
                    
                    
                    
                    
"
`;

exports[`LineNumberRenderable combines line number offset with hidden line numbers 1`] = `
" 42 Line 1          
    Line 2          
 44 Line 3          
    Line 4          
 46 Line 5          
                    
                    
                    
                    
                    
"
`;

exports[`LineNumberRenderable maintains consistent left padding for all line numbers 1`] = `
"  1 Line 1                    
  2 Line 2                    
  3 Line 3                    
  4 Line 4                    
  5 Line 5                    
  6 Line 6                    
  7 Line 7                    
  8 Line 8                    
  9 Line 9                    
 10 Line 10                   
 11 Line 11                   
 12 Line 12                   
                              
                              
                              
"
`;

exports[`LineNumberRenderable maintains stable visual line count when scrolling and typing with word wrap 1`] = `
"                                   
 ┌───────────────────────────────┐ 
 │   1 Welcome to the            │ 
 │     TextareaRenderable Demo!  │ 
 │   2                           │ 
 │   3 This is an interactive    │ 
 │     text editor powered by    │ 
 │     EditBuffer and            │ 
 │     EditorView.               │ 
 │   4                           │ 
 │   5 → This is a tab           │ 
 │   6 → → → Multiple tabs       │ 
 │   7                           │ 
 │   8 Emojis:                   │ 
 │   9 👩🏽‍💻  👨‍👩‍👧‍👦  🏳️‍🌈  🇺🇸  🇩🇪  🇯🇵    │ 
 │     🇮🇳                        │ 
 │  10                           │ 
 │  11 NAVIGATION:               │ 
 │  12   • Arrow keys to move    │ 
 │     cursor                    │ 
 │  13   • Home/End for line     │ 
 │     navigation                │ 
 │  14   • Ctrl+A/Ctrl+E for     │ 
 │     buffer start/end          │ 
 │  15   • Alt+F/Alt+B for       │ 
 │     word forward/backward     │ 
 │  16   • Alt+Left/Alt+Right    │ 
 │     for word forward/         │ 
 └─────backward──────────────────┘ 
                                   
"
`;

exports[`LineNumberRenderable maintains stable visual line count when scrolling and typing with word wrap 2`] = `
"                                   
 ┌───────────────────────────────┐ 
 │   1 Welcome to the            │ 
 │     TextareaRenderable Demo!  │ 
 │   2                           │ 
 │   3 This is an interactive    │ 
 │     text editor powered by    │ 
 │     EditBuffer and            │ 
 │     EditorView.               │ 
 │   4                           │ 
 │   5 → This is a tab           │ 
 │   6 → → → Multiple tabs       │ 
 │   7                           │ 
 │   8 Emojis:                   │ 
 │   9 👩🏽‍💻  👨‍👩‍👧‍👦  🏳️‍🌈  🇺🇸  🇩🇪  🇯🇵    │ 
 │     🇮🇳                        │ 
 │  10                           │ 
 │  11 NAVIGATION:               │ 
 │  12   • Arrow keys to move    │ 
 │     cursor                    │ 
 │  13   • Home/End for line     │ 
 │     navigation                │ 
 │  14   • Ctrl+A/Ctrl+E for     │ 
 │     buffer start/end          │ 
 │  15   • Alt+F/Alt+B for       │ 
 │     word forward/backward     │ 
 │  16   • Alt+Left/Alt+Right    │ 
 │     for word forward/         │ 
 └─────backward──────────────────┘ 
                                   
"
`;
